--- a/accountapplication/src/main/resources/application.properties
+++ b/accountapplication/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# database properties
+spring.datasource.url=jdbc:h2:tcp://localhost:9085/mem:userdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+# Hibernate Properties
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.generate_statistics=true
+
+
+
+
+
+
+
 
