Created Post Service in user aggregate application using rest template

--- a/useraggregateapplication/src/main/resources/application.properties
+++ b/useraggregateapplication/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 userservice.url=http://localhost:8085
 accountservice.url=http://localhost:8080
 
+
+#security.oauth2.resource.userInfoUri=http://localhost:8085/users/validateUser
+
 server.port = 8082
